feat: ALL, TAKEN 필터에서도 GraduationCategory 지정 시 카테고리 기반 필터링 지원